exports[`closest point between line segments finds the closest point between non-intersecting segments 1`] = `
Array [
  0.05000000000000071,
  Float32Array [
    1.399999976158142,
    0.699999988079071,
    0
  ],
  Float32Array [
    1.5,
    0.5,
    0
  ]
]
`;

exports[`closest point between line segments finds the closest point between two intersecting segments 1`] = `
Array [
  0,
  Float32Array [
    1.25,
    0.5,
    0
  ],
  Float32Array [
    1.25,
    0.5,
    0
  ]
]
`;

exports[`closest point between line segments finds the closest point between two points 1`] = `
Array [
  0.5,
  Float32Array [
    0.5,
    0,
    0
  ],
  Float32Array [
    0,
    0.5,
    0
  ]
]
`;

exports[`closest point between line segments finds the closest point between two touching segments 1`] = `
Array [
  0,
  Float32Array [
    2,
    1,
    0
  ],
  Float32Array [
    2,
    1,
    0
  ]
]
`;

exports[`closest point on triangle finds the closest point to a triangle 1`] = `
Array [
  1,
  Float32Array [
    0,
    0,
    0
  ]
]
`;

exports[`closest point on triangle finds the closest point to a triangle edge 1`] = `
Array [
  1,
  Float32Array [
    0,
    0,
    1
  ]
]
`;

exports[`closest point on triangle finds the closest point touching a triangle 1`] = `
Array [
  0,
  Float32Array [
    0,
    0,
    -0.5
  ]
]
`;
